Other archival request APIs
